--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "blessed": "^0.1.81",
     "mavlink": "^1.0.1",
-    "serialport": "^4.0.6"
+    "serialport": "^4.0.6",
+    "telnet2": "0.0.1"
   }
 }
