--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "blessed": "^0.1.81",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "dbus-native": "^0.2.0",
     "express": "^4.14.0",
     "http": "0.0.0",
     "json-stringify-pretty-compact": "^1.0.2",
