--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.2",
     "mavlink": "^1.0.1",
     "request": "^2.79.0",
+    "rpio": "git+https://github.com/jperkin/node-rpio.git",
     "serialport": "^4.0.6",
     "telnet2": "0.0.1"
   }
